# tdd-with-python

./: .gitignore  README.md  functional_tests.py  manage.py  pyproject.toml  requirements.txt
accounts/: authentication.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20240815_1819.py  0003_token.py  0004_auto_20240815_1824.py
accounts/tests/: test_authentication.py  test_models.py  test_views.py
functional_tests/: base.py  list_page.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py  tests.py
lists/: api.py  forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_auto_20240815_0953.py  0006_list_owner.py  0007_list_shared_with.py
lists/static/: list.js
lists/static/tests/: tests.html
lists/templates/: base.html  home.html  list.html  my_lists.html
lists/tests/: test_all.py  test_api.py  test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
