[tool.poetry]
name = "tdd-with-python"
version = "0.1.0"
description = "TDD with Python book"
authors = ["Jess Monter"]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141.0"
Django = "1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
